--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prisma:init": "prisma migrate dev --name Inicializacion",
+    "prisma:migrate": "prisma migrate dev --name"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
